# vera

./: .gitignore  Cargo.toml  README.md  agents.md  build.rs  development.md  grammar.ebnf  query.smt2  roadmap.md  task.md  test.out  test.smt2  test_goto.vera
design/: architecture.md  cli_and_logging.md  lsp_and_parsing.md  verification_pipeline.md
docs/: compiler_lsp.md  introduction.md  spec.md  syntax.md  verification.md
examples/: arena.vera  base64.vera  bst.vera  circular_queue.vera  closures.vera  grep.vera  http_server.vera  linked_list.vera  strcpy.vera  tea.vera
memory/: MEMORY.md  feedback_agents_md_first.md  project_phase3_state.md
scratch/: test_parser.rs
scripts/: install_z3.sh
selftests/: 001_basic_math.vera  002_exit_code.vera  004_syntax_error_recovery.vera  005_type_mismatch.vera  006_control_flow.vera  007_scope_error.vera  008_basic_assert.vera  009_failing_assert.vera  010_contracts.vera  011_function_calls.vera  012_factorial.vera  013_structs.vera  014_while_loop.vera  015_arrays_slices.vera  015_break_continue.vera  016_enums.vera  016_for_loop.vera  017_try_operator.vera  017_variants.vera  018_pointers_and_references.vera  019_unsafe_blocks.vera  020_unsafe_fail.vera  021_borrow_checker.vera  022_borrow_fail.vera  023_closure.vera  024_generics.vera  025_refinement_types.vera  026_vacuous_preconditions.vera  027_loop_invariants.vera  028_loop_termination.vera  029_logic_quantifiers.vera  030_ghost_code.vera  031_ghost_code_fail.vera  032_memory_models.vera  033_memory_models_fail.vera  034_framing_pass.vera  035_assigns_multiple.vera  (+12 more)
(+37 files in other folders)
