[package]
name = "verify"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.14"
rowan = "0.15"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"] }
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0.18"


